--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ limitations under the License.
     src="https://cdn.consentmanager.net/delivery/autoblocking/539b9d9f016c1.js"
     data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>-->
 
-  <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <!-- AMP Analytics -->
@@ -3756,9 +3755,9 @@ data-credentials="include"></amp-analytics>
             </amp-position-observer>
             {{#land-see-category}}
             <amp-carousel type="slides" media="{{media-query}}" width="80vw" height="{{height}}" layout="flex-item"
-              controls display="flex">
+              controls>
               {{#story-slide}}
-              <div class="land-see-story-slide flex" display="flex">
+              <div class="land-see-story-slide flex">
                 {{#story-post}}
                 <div class="mx1 col align-top {{post-classes}}" display="flex">
                   <a href="{{post-url}}" class="text-decoration-none">
