--- a/yotu.html
+++ b/yotu.html
@@ -84,6 +84,7 @@
     <script>
         // Sample video IDs
         const videoIds = [
+            "whl05wi5KXw",
             "hOQw_J-JjJk",
             "KCJbIbySmk4",
             "k_dLVdoRhFM",
