--- a/yotu.html
+++ b/yotu.html
@@ -84,9 +84,15 @@
     <script>
         // Sample video IDs
         const videoIds = [
+            "POu51x9v-40",
+            "W20feROpK1o",
+            "ycNstWXw-VA",
+            "vv75IBK3XUM",
+            "RXF6QawjbSI",
+            "sW4l802xphA",
+            "sdbZTNKvoM8",
             "4l-P9HjdU5E",
             "3kgNy-kvFak",
-            "5W5dsgpeyLs",
             "whl05wi5KXw",
             "hOQw_J-JjJk",
             "KCJbIbySmk4",
@@ -112,6 +118,7 @@
                 ampYouTube.setAttribute('height', '270');
                 ampYouTube.setAttribute('layout', 'responsive');
                 ampYouTube.setAttribute('data-videoid', videoId);
+                ampYouTube.setAttribute('autoplay', 'autoplay');
                 np.appendChild(ampYouTube);
                 videoList.appendChild(np);
             });
