--- a/yotu.html
+++ b/yotu.html
@@ -84,9 +84,8 @@
     <script>
         // Sample video IDs
         const videoIds = [
-            "POu51x9v-40",
+     "SpS7z-laLVU",
             "W20feROpK1o",
-            "vv75IBK3XUM",
             "RXF6QawjbSI",
             "sW4l802xphA",
             "sdbZTNKvoM8",
