links and spacing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ limitations under the License.
   <meta name="viewport" content="width=device-width" />
   <meta name="description"
     content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
-<script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
 
   <meta name="amp-google-client-id-api" content="googleanalytics" />
@@ -3374,7 +3374,7 @@ limitations under the License.
       <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
     </div>
   </amp-consent>
-  <!-- <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+  <!-- <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
     <script id="hello-world" type="text/plain" target="amp-script">
    window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
@@ -3755,8 +3755,7 @@ data-credentials="include"></amp-analytics>
             <amp-position-observer on="enter:recommendedSlideIn.start" layout="nodisplay">
             </amp-position-observer>
             {{#land-see-category}}
-            <amp-carousel type="slides" media="{{media-query}}" width="80vw" height="{{height}}" 
-              controls>
+            <amp-carousel type="slides" media="{{media-query}}" width="80vw" height="{{height}}" controls>
               {{#story-slide}}
               <div class="land-see-story-slide flex">
                 {{#story-post}}
@@ -3764,7 +3763,7 @@ data-credentials="include"></amp-analytics>
                   <a href="{{post-url}}" class="text-decoration-none">
                     {{#image}}
                     <amp-img class="land-see-post-image {{classes}}" alt="{{alt}}" media="{{media-query}}" width="12vw"
-                      height="12vw" layout="{{layout}}" src="{{src}}" >
+                      height="12vw" layout="{{layout}}" src="{{src}}">
                     </amp-img>
                     {{/image}}
                   </a>
