--- a/minnowspace.html
+++ b/minnowspace.html
@@ -2347,7 +2347,7 @@ limitations under the License.
           }
         </script>
   </div>
-  <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="100">
+  <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
     <script id="hello-world" type="text/plain" target="amp-script">
        window.dataLayer = window.dataLayer || [];
           function gtag() { dataLayer.push(arguments); }
@@ -2446,7 +2446,7 @@ limitations under the License.
 
         As the clock ticks down to the potential ban of TikTok this Sunday, millions of users are scrambling to find
         alternative
-        platforms.  Surprisingly, many are flocking to Rednote, a platform owned by a Chinese company—seemingly at odds
+        platforms. Surprisingly, many are flocking to Rednote, a platform owned by a Chinese company—seemingly at odds
         with
         the entire rationale behind banning TikTok in the first place. The ban, heavily justified by concerns about
         Chinese
@@ -2470,7 +2470,7 @@ limitations under the License.
 
       <p class="mb1">
         The Supreme Court just chimed in, because of course they did
-  </p>
+      </p>
 
       <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1880286110875836900">
       </amp-twitter>
@@ -2515,7 +2515,8 @@ limitations under the License.
         of investors, all profits are reinvested into the platform and then distributed back to its users. This
         structure is
         reminiscent of cooperative economic principles, where users collectively own and benefit from the success of the
-        platform.  It is still a work in progress but the tools have been built and are accessable.  If some teenager in silicon valley can get rich off of a social media platform, why can't we?
+        platform. It is still a work in progress but the tools have been built and are accessable. If some teenager in
+        silicon valley can get rich off of a social media platform, why can't we?
       </p>
 
       <p class="mb1">
