--- a/deepseek.html
+++ b/deepseek.html
@@ -20,8 +20,8 @@ limitations under the License.
 
 <head>
     <meta charset="utf-8">
-    <title>Black Doves Review</title>
-    <link rel="canonical" href="https://minnowspace.com/blackdoves.html">
+    <title>deepseek</title>
+    <link rel="canonical" href="https://minnowspace.com/deepseek.html">
     <meta name="viewport" content="width=device-width">
     <meta name="amp-google-client-id-api" content="googleanalytics">
     <meta name="google-adsense-account" content="ca-pub-3239465181490887">
@@ -2435,11 +2435,11 @@ limitations under the License.
 
     <main id="content" role="main">
         <article class="px3">
-            <figure >
-                <a href="https://www.netflix.com/watch/81931248?trackId=251726442">
-                    <amp-img src="./img/deepseek/Screenshot 2025-01-25 at 9.36.23 PM.png" width="29" height="9"
-                        alt="Peace Dove" layout="responsive" style="background:#fff"></amp-img>
-                </a>
+            <figure>
+
+                <amp-img src="./img/deepseek/Screenshot 2025-01-25 at 9.36.23 PM.png" width="29" height="9"
+                    alt="Peace Dove" layout="responsive" style="background:#fff"></amp-img>
+
                 <figcaption class="absolute right-0 bottom-0 left-0">
                     <header class="ampstart-image-heading px2 py2 line-height-4">
 
