--- a/hotels.html
+++ b/hotels.html
@@ -2440,7 +2440,7 @@ limitations under the License.
 
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-      <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
+      <amp-img width="404" height="720" alt="Welcome to Minnowspace" layout="responsive"
         src="./img/hotels/pexels-snapwire-165799.jpg" media="(max-width: 415px)"></amp-img>
       <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
         src="./img/hotels/pexels-snapwire-165799.jpg" media="(min-width: 416px)"></amp-img>
