--- a/beardirectory.html
+++ b/beardirectory.html
@@ -10,7 +10,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="canonical" href="https://minnowspace.com/beardirectory.html">
+  <link rel="canonical" href="https://minnowspace.com/beardirectory">
   <meta name="viewport" content="width=device-width">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <title>Bear Directory</title>
