--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="canonical" href="https://minnowspace.com/test.html">
+    <link rel="canonical" href="https://minnowspace.com/test">
 
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
