--- a/deepseek.html
+++ b/deepseek.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
     <meta charset="utf-8">
     <title>deepseek</title>
-    <link rel="canonical" href="https://minnowspace.com/deepseek.html">
+    <link rel="canonical" href="https://minnowspace.com/deepseek">
     <meta name="viewport" content="width=device-width">
     <meta name="amp-google-client-id-api" content="googleanalytics">
     <meta name="google-adsense-account" content="ca-pub-3239465181490887">
