--- a/deepseek.html
+++ b/deepseek.html
@@ -22,6 +22,7 @@ limitations under the License.
     <meta charset="utf-8">
     <title>deepseek</title>
     <link rel="canonical" href="https://minnowspace.com/deepseek">
+    <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
     <meta name="viewport" content="width=device-width">
     <meta name="amp-google-client-id-api" content="googleanalytics">
     <meta name="google-adsense-account" content="ca-pub-3239465181490887">
@@ -2457,6 +2458,7 @@ limitations under the License.
             <p class="mb1">
                 Founding and Background
             </p>
+                <amp-youtube data-videoid="WEBiebbeNCA" layout="responsive" width="480" height="270"></amp-youtube>
 
             <p class="mb1">
                 High-Flyer, established by Liang Wenfeng, is one of China's largest quantitative hedge funds, known for
