--- a/yotu.html
+++ b/yotu.html
@@ -83,7 +83,9 @@
     <!---->
     <script>
         // Sample video IDs
-        const videoIds = ["WEBiebbeNCA",
+        const videoIds = [
+            "xCQXyZkMsbs",
+            "WEBiebbeNCA",
             "SpS7z-laLVU",
             "W20feROpK1o",
             "RXF6QawjbSI",
