--- a/deepseek.html
+++ b/deepseek.html
@@ -2458,7 +2458,7 @@ limitations under the License.
             <p class="mb1">
                 Founding and Background
             </p>
-                <amp-youtube data-videoid="WEBiebbeNCA" layout="responsive" width="480" height="270"></amp-youtube>
+                <amp-youtube data-videoid="xCQXyZkMsbs" layout="responsive" width="480" height="270"></amp-youtube>
 
             <p class="mb1">
                 High-Flyer, established by Liang Wenfeng, is one of China's largest quantitative hedge funds, known for
@@ -2486,6 +2486,7 @@ limitations under the License.
                 DeepSeek-Coder (November 2023): An open-source model designed to assist in code generation and software
                 development.
             </p>
+        <amp-youtube data-videoid="WEBiebbeNCA" layout="responsive" width="480" height="270"></amp-youtube>
 
             <p class="mb1">
                 DeepSeek-LLM (November 2023): A large language model with 67 billion parameters, developed to compete
