--- a/minnowspace.html
+++ b/minnowspace.html
@@ -20,7 +20,7 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>TikTok, Rednote & Minnowspace</title>
+  <title>TikTok, DeepSeek, Rednote & Minnowspace</title>
   <link rel="canonical" href="https://minnowspace.com/minnowspace">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
