--- a/minnowspace.html
+++ b/minnowspace.html
@@ -2437,34 +2437,46 @@ limitations under the License.
 
   <main id="content" role="main">
     <article class="px3">
-      <h2 id="story" class="my4 theme2-anchored">TikTok Ban Sparks Interest in Rednote but why don't we just own our own
-        social media and let the robots help?</h2>
+      <h2 id="story" class="my4 theme2-anchored">The TikTok Ban Came and Went—Now We’re All Being Watched</h2>
       <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1880260809563205745">
       </amp-twitter>
       <p class="mb1 ampstart-dropcap">
 
 
-        As the clock ticks down to the potential ban of TikTok this Sunday, millions of users are scrambling to find
-        alternative
-        platforms. Surprisingly, many are flocking to Rednote, a platform owned by a Chinese company—seemingly at odds
-        with
-        the entire rationale behind banning TikTok in the first place. The ban, heavily justified by concerns about
-        Chinese
-        government influence over TikTok, has inadvertently opened up a candid and unexpected cultural exchange between
-        users
-        in
-        both countries.</p>
+        Remember when the TikTok ban was supposed to save us from surveillance? Yeah, that didn’t happen. Instead, the
+        ban came
+        and went, and now we’re all being surveilled more than ever—just by different players. While the oligarchy
+        patted itself
+        on the back for “protecting” us, they quietly expanded their own surveillance apparatus. Surprise, surprise: the
+        real
+        winners are the same tech giants and government agencies that were already spying on us..</p>
+<p class="mb1">
+        <h2>Surveillance Is the New Normal</h2>
+        <p>The TikTok ban was supposed to protect us from Chinese surveillance, but here’s the kicker: we’re now being surveilled
+        by our own government and tech oligarchs more than ever. Every click, every post, every search is tracked, logged, and
+        monetized. The ban didn’t stop surveillance—it just shifted the power dynamics. And while we’re busy arguing about who’s
+        spying on us, the oligarchy is laughing all the way to the bank.</p>
+</p>
+<p class "mb1">
+        <h2>How We Got Here</h2>
 
+        The TikTok ban was a classic case of scapegoating. While the government pointed fingers at TikTok, they were
+        quietly
+        expanding their own surveillance programs. The FBI and CIA have been using social media to monitor Americans
+        for
+        years, and the TikTok ban was just a convenient distraction from their own overreach.
       <p class="mb1">
-      <h2>Eye-Opening Conversations Across Cultures</h2>
+      <h2>Rednote: The Platform We Didn’t Know We Needed</h2>
 
-      One of the most viral moments on Rednote came from a thread where a Chinese user asked, “Is it true Americans have
-      to
-      pay for an ambulance?” Embarrassed yet honest, Americans admitted, yes—ambulance rides can cost hundreds,
-      sometimes
-      thousands, of dollars. The responses from Chinese users ranged from disbelief to sympathy, sparking broader
-      questions:
-      “If communism is so terrible, why do Americans have to pay so much for basic services?”
+      When TikTok was on the chopping block, millions of users flocked to Rednote, a Chinese-owned platform that,
+      ironically,
+      became a space for raw, unfiltered conversations between Americans and Chinese users. At first, Americans loved
+      Rednote
+      for its fresh approach and lack of Silicon Valley censorship. But now, as the dust settles from the TikTok ban,
+      we’re
+      grappling with the reality that Rednote—and the rise of AI platforms like DeepSeek—are part of a larger shift in
+      how we
+      interact online.
       </p>
 
 
