--- a/airevolution.html
+++ b/airevolution.html
@@ -126,7 +126,7 @@
         <h1>The AI Revolution: How the US and China Are Competing and Collaborating in the Global Tech Race</h1>
     </header>
     <div class="content">
-        <amp-img src="https://www.example.com/images/ai-us-china.jpg" alt="AI US China" width="800" height="450"
+        <amp-img src="./img/deepseek/Screenshot 2025-01-25 at 9.36.23 PM.png" alt="AI US China" width="28" height="8.6"
             layout="responsive"></amp-img>
         <p>Artificial Intelligence (AI) is no longer just a buzzword—it's a global phenomenon reshaping industries,
             economies, and geopolitical landscapes. Nowhere is this more evident than in the dynamic relationship
@@ -144,7 +144,7 @@
             initiatives, cross-border investments, and shared datasets are helping to accelerate AI innovation. For
             example, US-based AI startups are increasingly partnering with Chinese firms to access the vast Chinese
             market.</p>
-        <amp-youtube data-videoid="dQw4w9WgXcQ" layout="responsive" width="800" height="450"></amp-youtube>
+        <amp-youtube data-videoid="nfNGNouAsHk" layout="responsive" width="800" height="450"></amp-youtube>
         <h2>What Does the Future Hold?</h2>
         <p>As AI continues to evolve, the US-China relationship will remain a key driver of global tech trends. Whether
             through competition or collaboration, these two nations are shaping the future of AI—and the world is
