--- a/chat.html
+++ b/chat.html
@@ -20,8 +20,8 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Black Doves Review</title>
-  <link rel="canonical" href="https://minnowspace.com/blackdoves.html">
+  <title>Chat</title>
+  <link rel="canonical" href="https://minnowspace.com/chat">
 
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
