--- a/AustinHotels.html
+++ b/AustinHotels.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Dashboard</title>
+    <title>Where to Stay in Austin</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Script in the head with defer -->
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Hotel </h1>
+    <h1>Where to Stay in Austin </h1>
     <div id="data-container">Loading...</div>
     <!-- Your existing content -->
 
