--- a/AustinHotels.html
+++ b/AustinHotels.html
@@ -1,21 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!doctype html>
+<html ⚡>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Where to Stay in Austin</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Minimal AMP Template</title>
+    <link rel="canonical" href="https://example.com/">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+    <style amp-boilerplate>
+        body {
+            -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            animation: -amp-start 8s steps(1, end) 0s 1 normal both
+        }
 
-    <!-- Script in the head with defer -->
+        @-webkit-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
 
-    <script src="script.js"></script>
+            to {
+                visibility: visible
+            }
+        }
+
+        @-moz-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @-ms-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @-o-keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+
+        @keyframes -amp-start {
+            from {
+                visibility: hidden
+            }
+
+            to {
+                visibility: visible
+            }
+        }
+    </style><noscript>
+        <style amp-boilerplate>
+            body {
+                -webkit-animation: none;
+                -moz-animation: none;
+                -ms-animation: none;
+                animation: none
+            }
+        </style>
+    </noscript>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 
 <body>
     <h1>Where to Stay in Austin </h1>
-    <div id="data-container">Loading...</div>
-    <!-- Your existing content -->
+    <amp-script src="script.js" width="100vw" height="1000vh">
+        <div id="data-container">Loading...</div>
+    </amp-script>
+   
+        <!-- Your existing content -->
 
 </body>
 
