--- a/AustinHotels.html
+++ b/AustinHotels.html
@@ -77,6 +77,15 @@
         </style>
     </noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <style amp-custom>
+        h1 {
+            margin: 1rem;
+        }
+    
+        body {
+            background-image: url('https://minnowspace.com/img/main/austin.jpg');
+        }
+    </style>
 </head>
 
 <body>
