--- a/valentinesday.html
+++ b/valentinesday.html
@@ -85,7 +85,7 @@
         }
     
         body {
-            background-image: url('https://minnowspace.com/img/main/austin.jpg');
+            background-image: url('https://minnowspace.com/img/main/valentines.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
