--- a/valentinesday.html
+++ b/valentinesday.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html ⚡>
 
@@ -7,7 +6,8 @@
     <title>Valentine's Day 2025</title>
     <link rel="canonical" href="https://minnowspace.com/austinhotels">
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-    <script async custom-element="amp-fx-collection" src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>
+    <script async custom-element="amp-fx-collection"
+        src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>
     <meta name="amp-script-src" content="sha384-ZXYoie5lgNGaaBkdVCmXHTqkJWb97FIRvkhHsvmNcy3A0g-lkMWdoQB0mReKbCTX">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
@@ -83,14 +83,14 @@
         h1 {
             margin: 1rem;
         }
-    
-        body {background-color: red;
+
+        body {
+            background-color: red;
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
 
         }
-
     </style>
 </head>
 
@@ -109,16 +109,37 @@
               } 
          </script>
     </amp-analytics>
-    <div amp-fx="fade-in" data-duration="2000ms" class="container"> 
+    <div amp-fx="fade-in" data-duration="2000ms" class="container">
 
- 
-    <h1>Valentine's Day 2025 </h1>
-    <!--<amp-script src="./valentinesday.js" layout="fixed-height" height="310000vh"> -->
-<amp-script src="https://minnowspace.com/valentinesday.js" width="100vw" height="31000vh">
-        <div id="data-container">Loading...</div>
-    </amp-script>
-</div>
-        <!-- Your existing content -->
+        <h1 amp-fx="parallax" data-parallax-factor="1.5">
+            Valentine's Day 2025
+        </h1>
+        <h3 amp-fx="parallax" data-parallax-factor="1.3">
+            <p>
+                Ordering your Valentine’s Day gifts like flowers and chocolates early ensures you get the best selection
+                and avoid
+                last-minute stress. </p>
+            <p>Sending thoughtful surprises to your mom, sisters, or significant other shows you care, while
+                securing premium blooms and gourmet treats makes your gestures stand out. </p>
+            <p>Plus, planning ahead saves you time and money,
+                letting you focus on creating meaningful moments instead of scrambling for leftovers at the pharmacy.
+            </p>
+            <p>
+                Valentine’s Day is a time to celebrate love,
+            </p>
+        </h3>
+        <amp-img src="https://minnowspace.com/img/main/valentinesday.jpg" width="800" height="600" layout="responsive"
+            alt="Valentine's Day 2025"></amp-img>
+
+            <div amp-fx="fade-in fly-in-bottom" data-duration="1000ms">
+                <amp-img width="1600" height="900" layout="responsive" src="https://picsum.photos/1600/900?image=1069"></amp-img>
+            </div>
+        <!--<amp-script src="./valentinesday.js" layout="fixed-height" height="310000vh"> -->
+        <amp-script src="https://minnowspace.com/valentinesday.js" width="100vw" height="31000vh">
+            <div id="data-container">Loading...</div>
+        </amp-script>
+    </div>
+    <!-- Your existing content -->
 
 </body>
 
