--- a/valentinesday.html
+++ b/valentinesday.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ⚡>
+<html amp lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -10,6 +10,7 @@
         src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>
     <meta name="amp-script-src" content="sha384-ZXYoie5lgNGaaBkdVCmXHTqkJWb97FIRvkhHsvmNcy3A0g-lkMWdoQB0mReKbCTX">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="description" content="Valentine's Day Gift Ideas, Flowers, Strawberries, Teddy Bears and Chocolates">
     <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
     <style amp-boilerplate>
         body {
