--- a/exp.html
+++ b/exp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Valentine's Day 2025</title>
-    <link rel="canonical" href="https://minnowspace.com/valentinesday">
+    <link rel="canonical" href="https://minnowspace.com/austinhotels">
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <script async custom-element="amp-fx-collection"
         src="https://cdn.ampproject.org/v0/amp-fx-collection-0.1.js"></script>
@@ -143,8 +143,8 @@
 
 
             </h3>
-            <!--<amp-script src="./valentinesday.js" layout="fixed-height" height="310000vh"> -->
-            <amp-script src="https://minnowspace.com/valentinesday.js" width="100vw" height="31000vh">
+         <amp-script src="./exp.js" layout="fixed-height" height="310000vh">
+            <!--   <amp-script src="https://minnowspace.com/exp.js" width="100vw" height="31000vh">-->
                 <div id="data-container">Loading...</div>
             </amp-script>
         </div>
