--- a/real-estate.html
+++ b/real-estate.html
@@ -20,8 +20,8 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Black Doves Review</title>
-  <link rel="canonical" href="https://minnowspace.com/blackdoves.html">
+  <title>Austin Real Estate</title>
+  <link rel="canonical" href="https://minnowspace.com/real-estate.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
