--- a/real-estate.html
+++ b/real-estate.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>Austin Real Estate</title>
-  <link rel="canonical" href="https://minnowspace.com/real-estate.html">
+  <link rel="canonical" href="https://minnowspace.com/real-estate">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
