--- a/valentinesday.html
+++ b/valentinesday.html
@@ -173,6 +173,9 @@
                 </p>
                 <p>
                     Valentine’s Day is a time to celebrate love,
+                    <a href="https://sovrn.co/bfny8u2"><amp-img src="https://minnowspace.com/img/valentinesday/edible.jpg"
+                            alt="flowers" width="200" height="200" layout="responsive"></a>
+                        Order some Edible Arrangments Here: Use code LOVE15 for 15% off!</a>
                 </p>
 
 
