--- a/valentinesday.html
+++ b/valentinesday.html
@@ -173,15 +173,23 @@
                 </p>
                 <p>
                     Valentine’s Day is a time to celebrate love,
-                    <a href="https://sovrn.co/bfny8u2"><amp-img src="https://minnowspace.com/img/valentinesday/edible.jpg"
-                            alt="flowers" width="200" height="200" layout="responsive"></a>
-                        Order some Edible Arrangments Here: Use code LOVE15 for 15% off!</a>
-                </p>
 
+                </p>
 
             </h3>
         <!--  <amp-script src="./valentinesday.js" layout="fixed-height" height="5000vh">-->
            <amp-script src="https://minnowspace.com/valentinesday.js" width="100vw" height="31000vh">
+             
+  
+                    <a href="https://sovrn.co/bfny8u2" style="text-decoration: none; color: 
+                    #ffffff; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
+                        <amp-img src="https://minnowspace.com/img/valentinesday/edible.jpg" alt="flowers" width="250" height="250"
+                            layout="fixed">
+                        </amp-img>
+                        <span style="margin-top: 10px;">Order an Edible Arrangement</span>
+                    </a>
+ 
+                                
                 <div id="data-container">Loading...</div>
             </amp-script>
         </div>
