--- a/valentinesday.html
+++ b/valentinesday.html
@@ -186,7 +186,7 @@
                         <amp-img src="https://minnowspace.com/img/valentinesday/edible.jpg" alt="flowers" width="250" height="250"
                             layout="fixed">
                         </amp-img>
-                        <span style="margin-top: 10px;">Order an Edible Arrangement</span>
+                        <span style="margin-top: 10px;">Order an Edible Arrangement get 15% off with code LOVE15</span>
                     </a>
  
                                 
