--- a/index.html
+++ b/index.html
@@ -3739,7 +3739,7 @@ data-credentials="include"></amp-analytics>
         <div class="sm-col sm-col-3 col-6 right-align">
           <a href="https://minnowspace.com/stories.amp.html"
             class="land-see-next-page mt2 mr2 inline-block relative">Next
-            Story</a>
+            Story!</a>
         </div>
       </div>
     </section>
